--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -103,9 +103,9 @@
                     <a th:href="@{/admin/links}" th:class="${active}=='links'?'waves-effect active':'waves-effect'"><i
                             class="fa fa-link" aria-hidden="true"></i><span> 友链管理 </span></a>
                 </li>
-                <li th:class="${active}=='rabbish'?'active':''">
-                    <a th:href="@{/admin/rabbish}"
-                       th:class="${active}=='rabbish'?'waves-effect active':'waves-effect'"><i
+                <li th:class="${active}=='rubbish'?'active':''">
+                    <a th:href="@{/admin/rubbish}"
+                       th:class="${active}=='rubbish'?'waves-effect active':'waves-effect'"><i
                             class="fa fa-recycle" aria-hidden="true"></i><span> 回收站 </span></a>
                 </li>
                 <li th:class="${active}=='setting'?'active':''">
